<resources>
    <string name="app_name">幼儿认知</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="searchNotes">搜索笔记</string>
    <string name="back">退出</string>
    <string name="speaking">跟我读</string>
    <string name="english">学英语</string>
    <string name="object">认事物</string>
    <string name="test">考一考</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="play">播放</string>
    <string name="idiom">学成语</string>
    <string name="animal">动物</string>
    <string name="fruit">水果</string>
    <string name="vegetables">蔬菜</string>
    <string name="down">按住说话</string>
    <string name="up">正在说话</string>
    <string name="spell">输入单词</string>
    <string name="learning">学一学</string>
    <string name="identify">智能识别</string>
    <string name="entertainment">娱乐</string>

    <string name="vedio_name">视频名称</string>
    <string name="start_time">开始时间</string>
    <string name="play_title_name">播放电影名称</string>
    <string name="now_time">时间日期</string>
    <string name="now_speed">网速</string>

</resources>
