<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lz.babyperceive.MainActivity">

    <com.example.lz.babyperceive.View.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"></com.example.lz.babyperceive.View.TitleView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleview"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ico_logo"/>
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/animal_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/animal" />
        <Button
            android:id="@+id/fruit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fruit"/>
        <Button
            android:id="@+id/vegetables_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vegetables"/>
        <Button
            android:id="@+id/test_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test"/>
        <Button
            android:id="@+id/idiom_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/idiom"/>

    </LinearLayout>

</RelativeLayout>
