<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lz.babyperceive.Activity.SpeakingActivity">

    <com.example.lz.babyperceive.View.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.example.lz.babyperceive.View.TitleView>
<TextView
    android:id="@+id/chineseSpell_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/navy"
    android:layout_centerHorizontal="true"
    android:layout_above="@+id/chinese_tv"
    android:textSize="20sp"
    android:text="111"/>
    <TextView
        android:id="@+id/chinese_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="111"
        android:textColor="@color/black"
        android:textSize="100sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chinese_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <Button
            android:id="@+id/play_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/next_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</RelativeLayout>
