<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@color/gray"
    >

    <Button
        android:layout_width="30dp"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/play_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="@drawable/play_back" />

    <TextView
        android:id="@+id/play_title_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:gravity="left"
        android:text="@string/play_title_name"
        android:textColor="@color/white"
        android:singleLine="true"
        android:maxEms="10"
        android:ellipsize="end"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/now_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/now_time"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/now_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/now_speed"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/paly_lock"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:background="@drawable/play_screen_unlock" />
</LinearLayout>
